fixed navigation mobile

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -46,7 +46,11 @@
 
 #navbar__logo2 {
 	background-color: #ffffff;
-	background-image: linear-gradient(to top, rgb(226, 159, 232) 0%, rgb(226, 159, 232) 100%);
+	background-image: linear-gradient(
+		to top,
+		rgb(226, 159, 232) 0%,
+		rgb(226, 159, 232) 100%
+	);
 	background-size: 100%;
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
@@ -126,8 +130,7 @@
 		height: 80px;
 		z-index: 1;
 		width: 100%;
-		max-width: 1300px;
-		padding: 0;
+		padding: 24px;
 	}
 
 	.navbar__menu {
@@ -150,6 +153,11 @@
 		z-index: 99;
 		height: 60vh;
 		font-size: 1.6rem;
+		width: 100%;
+		left: 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 	}
 
 	#navbar__logo {
@@ -196,15 +204,7 @@
 	.fab,
 	.fa-instagram {
 		font-size: 3rem;
-		margin-left: 14.5rem;
-		margin-top: 7rem;
-	}
-
-	#mobile-menu {
-		position: absolute;
-		top: 10%;
-		left: 430px;
-		transform: translate(5%, 20%);
+		margin-bottom: 48px;
 	}
 
 	.navbar__toggle .bar {
