--- a/scss/_photo-grid.scss
+++ b/scss/_photo-grid.scss
@@ -22,6 +22,14 @@
 	height: auto;
 }
 
+@media screen and (max-width: 960px) {
+	.gallery-container {
+		.image-gallery {
+			grid-template-columns: 1fr;
+		}
+	}
+}
+
 .gallery-container-2 {
 	width: 100%;
 	padding: 96px;
@@ -37,6 +45,15 @@
 			display: flex;
 			flex-direction: column;
 			gap: 16px;
+		}
+	}
+}
+
+@media screen and (max-width: 960px) {
+	.gallery-container-2 {
+		padding: 16px;
+		.image-gallery-2 {
+			grid-template-columns: 1fr;
 		}
 	}
 }
