--- a/styles/index.css
+++ b/styles/index.css
@@ -146,8 +146,7 @@ a:visited {
     height: 80px;
     z-index: 1;
     width: 100%;
-    max-width: 1300px;
-    padding: 0;
+    padding: 24px;
   }
   .navbar__menu {
     display: grid;
@@ -168,6 +167,11 @@ a:visited {
     z-index: 99;
     height: 60vh;
     font-size: 1.6rem;
+    width: 100%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   #navbar__logo {
     font-family: "Croissant One", cursive;
@@ -207,14 +211,7 @@ a:visited {
   .fab,
 .fa-instagram {
     font-size: 3rem;
-    margin-left: 14.5rem;
-    margin-top: 7rem;
-  }
-  #mobile-menu {
-    position: absolute;
-    top: 10%;
-    left: 430px;
-    transform: translate(5%, 20%);
+    margin-bottom: 48px;
   }
   .navbar__toggle .bar {
     display: block;
@@ -630,6 +627,11 @@ section .cards .text-card h3 {
   height: auto;
 }
 
+@media screen and (max-width: 960px) {
+  .gallery-container .image-gallery {
+    grid-template-columns: 1fr;
+  }
+}
 .gallery-container-2 {
   width: 100%;
   padding: 96px;
@@ -647,4 +649,13 @@ section .cards .text-card h3 {
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+@media screen and (max-width: 960px) {
+  .gallery-container-2 {
+    padding: 16px;
+  }
+  .gallery-container-2 .image-gallery-2 {
+    grid-template-columns: 1fr;
+  }
 }/*# sourceMappingURL=index.css.map */
